...
    <string name="service">Service</string>
    <string name="to">To</string>
    <string name="time">Time</string>
    <string name="time_template">Time offset</string>
    <string name="message">Message</string>
    <string name="clear_fields">Clear fields</string>
    <string name="complete">Complete</string>
    <string name="timetemplate_title">TimeTemplate</string>
    <string name="message_title">Message</string>
    <string name="addedit_treatment_title">AddEdit</string>
    <string name="before_time">Before chosen time</string>
    <string name="after_time">After chosen time</string>
    <string name="time_template_missing_data">Time offset must be at least one minute.</string>
...
    <string name="permission_denied">Permission denied</string>
    <string name="addedit_contact_title">AddEdit</string>
    <string name="settings_title">Settings</string>
    <string name="import_contacts_title">Import contacts</string>
    <string name="price">Price</string>
    <string name="duration">Duration</string>
    <string name="new_message">New message</string>
    <string name="choose">Choose</string>
    <string name="edit">Edit</string>
    <string name="empty_message">Message cannot be empty</string>
    <string name="sms_error_channel">Sms error</string>
    <string name="sms_error_description">When a scheduled sms failed to be delivered or sent</string>
    <string name="empty_treatment_message">Empty services text</string>
    <string name="loading_treatment_error">Error while loading service</string>
    <string name="delete">delete</string>
    <string name="empty_contact_message">Empty contact text</string>
    <string name="loading_contact_error">Error while loading contact</string>
    <string name="default_message">Default message</string>
    <string name="default_timetemplate">Default time offset</string>
    <string name="default_treatment">Default service</string>
    <string name="none">none</string>
...
