<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.oscarcreator.pigeon.dashboard.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard"
        >
        <action
            android:id="@+id/action_dashboardFragment_to_addEditTreatmentFragment"
            app:destination="@id/addEditScheduledTreatmentFragment" >
            <argument
                android:name="scheduledTreatmentId"
                android:defaultValue="-1L" />
        </action>
        <action
            android:id="@+id/action_dashboardFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_dashboardFragment_to_scheduledTreatmentsFragment"
            app:destination="@id/scheduledTreatmentsFragment" />
        <action
            android:id="@+id/action_dashboardFragment_to_scheduledTreatmentDetailFragment"
            app:destination="@id/scheduledTreatmentDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/addEditScheduledTreatmentFragment"
        android:name="com.oscarcreator.pigeon.addeditscheduledtreatment.AddEditScheduledTreatmentFragment"
        android:label="{title}"
        tools:layout="@layout/fragment_addedit_scheduled_treatment"
        >
        <action
            android:id="@+id/action_addEditTreatmentFragment_to_messageListFragment"
            app:destination="@id/messageListFragment" />
        <action
            android:id="@+id/action_addEditTreatmentFragment_to_timeTemplateListFragment"
            app:destination="@id/timeTemplateListFragment" />
        <argument
            android:name="scheduledTreatmentId"
            app:argType="long"
            android:defaultValue="-1L" />
        <argument
            android:name="title"
            app:argType="string" />
        <action
            android:id="@+id/action_addEditScheduledTreatmentFragment_to_treatmentsFragment"
            app:destination="@id/treatmentsFragment" />
        <action
            android:id="@+id/action_addEditScheduledTreatmentFragment_to_contactListFragment"
            app:destination="@id/contactListFragment" />
    </fragment>
    <fragment
        android:id="@+id/messageListFragment"
        android:name="com.oscarcreator.pigeon.messages.MessagesFragment"
        android:label="@string/messages"
        tools:layout="@layout/fragment_messages" >
        <action
            android:id="@+id/action_messageListFragment_to_messageDetailFragment"
            app:destination="@id/messageDetailFragment" />
        <action
            android:id="@+id/action_messageListFragment_to_addEditMessageFragment"
            app:destination="@id/addEditMessageFragment" />
    </fragment>
    <fragment
        android:id="@+id/addEditMessageFragment"
        android:name="com.oscarcreator.pigeon.addeditmessage.AddEditMessageFragment"
        android:label="@string/message_title"
        tools:layout="@layout/fragment_addedit_message"
        >
        <argument
            android:name="message_id"
            app:argType="long"
            android:defaultValue="-1L" />
        <action
            android:id="@+id/action_addEditMessageFragment_to_variableInfoFragment"
            app:destination="@id/variableInfoFragment" />
        <action
            android:id="@+id/action_addEditMessageFragment_to_messageDetailFragment"
            app:destination="@id/messageDetailFragment"
            app:popUpTo="@id/messageDetailFragment"
            app:popUpToInclusive="true" >
            <argument
                android:name="message_id"
                android:defaultValue="-1L" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/timeTemplateListFragment"
        android:name="com.oscarcreator.pigeon.timetemplates.TimeTemplatesFragment"
        android:label="@string/time_offsets"
        tools:layout="@layout/fragment_timetemplate_list"
        >
        <action
            android:id="@+id/action_timeTemplateListFragment_to_timeTemplateDetailFragment"
            app:destination="@id/timeTemplateDetailFragment" />
        <action
            android:id="@+id/action_timeTemplateListFragment_to_addEditTimeTemplateFragment"
            app:destination="@id/addEditTimeTemplateFragment" />
    </fragment>
    <fragment
        android:id="@+id/addEditTimeTemplateFragment"
        android:name="com.oscarcreator.pigeon.addedittimetemplate.AddEditTimeTemplateFragment"
        android:label="@string/addedit_timetemplate_title"
        tools:layout="@layout/fragment_addedit_timetemplate"
        >
        <argument
            android:name="timetemplate_id"
            app:argType="long"
            android:defaultValue="-1L" />
        <action
            android:id="@+id/action_addEditTimeTemplateFragment_to_timeTemplateDetailFragment"
            app:destination="@id/timeTemplateDetailFragment"
            app:popUpTo="@id/timeTemplateDetailFragment"
            app:popUpToInclusive="true">
            <argument
                android:name="timetemplate_id"
                android:defaultValue="-1L" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/contactListFragment"
        android:name="com.oscarcreator.pigeon.contacts.ContactsFragment"
        android:label="@string/contacts"
        tools:layout="@layout/fragment_compose_view"
        >
        <action
            android:id="@+id/action_contactListFragment_to_addEditContactFragment"
            app:destination="@id/addEditContactFragment" />
        <action
            android:id="@+id/action_contactListFragment_to_detailContactFragment"
            app:destination="@id/detailContactFragment" />
        <action
            android:id="@+id/action_contactListFragment_to_loadContactsFragment"
            app:destination="@id/loadContactsFragment" />
    </fragment>
    <fragment
        android:id="@+id/addEditContactFragment"
        android:name="com.oscarcreator.pigeon.addeditcontact.AddEditContactFragment"
        android:label="@string/addedit_contact_title"
        tools:layout="@layout/fragment_addedit_contact"
        >
        <argument
            android:name="contactId"
            app:argType="long"
            android:defaultValue="-1L" />
        <action
            android:id="@+id/action_addEditContactFragment_to_detailContactFragment"
            app:destination="@id/detailContactFragment"
            app:popUpTo="@id/detailContactFragment"
            app:popUpToInclusive="true">
            <argument
                android:name="contactId"
                android:defaultValue="-1L" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.oscarcreator.pigeon.settings.SettingsFragment"
        android:label="@string/settings_title" >
        <action
            android:id="@+id/action_settingsFragment_to_loadContactsFragment"
            app:destination="@id/loadContactsFragment" />
    </fragment>
    <fragment
        android:id="@+id/loadContactsFragment"
        android:name="com.oscarcreator.pigeon.importcontacts.ImportContactsFragment"
        android:label="@string/import_contacts_title"
        tools:layout="@layout/fragment_load_contacts"
        />
    <fragment
        android:id="@+id/treatmentsFragment"
        android:name="com.oscarcreator.pigeon.treatments.TreatmentsFragment"
        android:label="@string/services"
        >
        <action
            android:id="@+id/action_treatmentsFragment_to_addEditTreatment"
            app:destination="@id/addEditTreatment" />
        <action
            android:id="@+id/action_treatmentsFragment_to_treatmentDetailFragment"
            app:destination="@id/treatmentDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/addEditTreatment"
        android:name="com.oscarcreator.pigeon.addedittreatment.AddEditTreatmentFragment"
        android:label="@string/addedit_treatment_title"
        tools:layout="@layout/fragment_addedit_treatment"
        >
        <argument
            android:name="treatmentId"
            app:argType="long"
            android:defaultValue="-1L" />
        <action
            android:id="@+id/action_addEditTreatment_to_treatmentDetailFragment"
            app:destination="@id/treatmentDetailFragment"
            app:popUpTo="@id/treatmentDetailFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/messageDetailFragment"
        android:name="com.oscarcreator.pigeon.messagedetail.MessageDetailFragment"
        android:label="" >
        <action
            android:id="@+id/action_messageDetailFragment_to_addEditMessageFragment"
            app:destination="@id/addEditMessageFragment" />
        <action
            android:id="@+id/action_messageDetailFragment_to_addEditTreatmentFragment"
            app:destination="@id/addEditScheduledTreatmentFragment" />
        <argument
            android:name="message_id"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/scheduledTreatmentsFragment"
        android:name="com.oscarcreator.pigeon.scheduledtreatments.ScheduledTreatmentsFragment"
        android:label="@string/appointments"
        tools:layout="@layout/fragment_scheduledtreatments"
        >
        <action
            android:id="@+id/action_scheduledTreatmentsFragment_to_scheduledTreatmentDetailFragment"
            app:destination="@id/scheduledTreatmentDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/treatmentDetailFragment"
        android:name="com.oscarcreator.pigeon.treatmentdetail.TreatmentDetailFragment"
        android:label=""
        tools:layout="@layout/fragment_detail_treatment"
        >
        <action
            android:id="@+id/action_treatmentDetailFragment_to_addEditTreatment"
            app:destination="@id/addEditTreatment" />
        <argument
            android:name="treatmentId"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>
    <fragment
        android:id="@+id/detailContactFragment"
        android:name="com.oscarcreator.pigeon.contactdetail.DetailContactFragment"
        android:label=""
        tools:layout="@layout/fragment_detail_contact"
        >
        <action
            android:id="@+id/action_detailContactFragment_to_addEditContactFragment"
            app:destination="@id/addEditContactFragment" />
        <argument
            android:name="contactId"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>
    <fragment
        android:id="@+id/scheduledTreatmentDetailFragment"
        android:name="com.oscarcreator.pigeon.scheduledtreatmentdetail.ScheduledTreatmentDetailFragment"
        android:label="" >
        <action
            android:id="@+id/action_scheduledTreatmentDetailFragment_to_addEditScheduledTreatmentFragment"
            app:destination="@id/addEditScheduledTreatmentFragment" />
        <argument
            android:name="scheduledTreatmentId"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>
    <fragment
        android:id="@+id/variableInfoFragment"
        android:name="com.oscarcreator.pigeon.addeditmessage.VariableInfoFragment"
        android:label="@string/variables_info"
        />
    <fragment
        android:id="@+id/timeTemplateDetailFragment"
        android:name="com.oscarcreator.pigeon.timetemplatedetail.TimeTemplateDetailFragment"
        android:label="" >
        <action
            android:id="@+id/action_timeTemplateDetailFragment_to_addEditTimeTemplateFragment"
            app:destination="@id/addEditTimeTemplateFragment" />
        <argument
            android:name="timetemplate_id"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>
</navigation>